--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        header
+        <img src="./Image/coming-soon.png" alt="Coming soon">
     </header>
     <main>
         main 
