--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <img src="./Image/coming-soon.png" alt="Coming soon">
+        <div id="header">
+           <p></p>
+        </div>
     </header>
     <main>
         main 
