--- a/index.html
+++ b/index.html
@@ -6,20 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming soon</title>
+    <!-- base style -->
+    <link rel="stylesheet" href="./style/base/base.css">
+    <link rel="stylesheet" href="./style/base/layout.css">
+    <!-- 3rd-party -->
+    <link rel="stylesheet" href="./style/3rd-party/font-awesome.min.css">
+    <link rel="stylesheet" href="./style/components/buttom.css">
+    <link rel="stylesheet" href="./style/components/clock.css">
+    <link rel="stylesheet" href="./style/components/mouse.css">
+    <link rel="stylesheet" href="./style/components/progress-bar.css">
+    <!-- custom style -->
     <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
-    <header>
-        <div id="header">
-           <p></p>
-        </div>
-    </header>
     <main>
-        main 
+        <section>
+            Hero content
+        </section>
+        <section>
+            Main content
+        </section>
+
     </main>
     <footer>
-        footer
+        Footer content
     </footer>
 </body>
 
