--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <main>
         <section>
             Hero content
+            <i class="fa-fast-forward"</i>
         </section>
         <section>
             Main content
