--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
     <link rel="stylesheet" href="./style/components/mouse.css">
     <link rel="stylesheet" href="./style/components/progress-bar.css">
     <!-- custom style -->
-    <link rel="stylesheet" href="./style/main.css">
+    
 </head>
 
 <body>
-    <main>
-        <section>
-            Hero content
-            <i class="fa-fast-forward"</i>
+    <main >
+        <section class="container">
+            <div class="row-short">
+                Hero content
+            <i class="fa-facebook">a</i>
+            </div>
+            
         </section>
-        <section>
-            Main content
+        <section class="container bg-primary">
+            <div class="row">
+                left colum
+            </div>
+            <div>
+                rigt colim
+            </div>
         </section>
 
     </main>
-    <footer>
+    <footer class="container bg-secondary">
         Footer content
     </footer>
 </body>
