--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
     <main>
         <section class="container hero bg-primary">
             <div class="row-short">
-                HERO CONTENT
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sapiente est consequatur dicta explicabo quasi id blanditiis, distinctio amet incidunt adipisci, ipsum voluptate omnis animi nam dolore autem, facilis dolorum temporibus itaque dolor quam aut? Corrupti molestiae natus, temporibus deleniti, neque corporis fuga similique a, quam porro necessitatibus sapiente voluptatibus nemo fugiat soluta? Libero temporibus dignissimos distinctio hic quia ducimus sunt accusamus totam nam, odio error, dolorum rerum. Ad minus voluptatibus quibusdam aliquam soluta mollitia magni voluptates, deleniti exercitationem cupiditate itaque facere culpa molestiae iusto dolorem libero? Sunt adipisci vel, maxime at excepturi, officiis veritatis tenetur quia rem, sapiente ex.
+                <!-- HERO CONTENT -->
+                <h1>COMING SOON</h1> 
+                <p> An awesom new company from web recources is coming very soon </p>
+                <p> Enter you email to reguest an early inivation!</p>
             </div>
         </section>
         <section class="container">
             <div class="row main-content">
                 <div class="left-column">
-                    LEFT COLUMN
+                    <!-- LEFT COLUMN -->
+                    <h3>ABOAUT STARTUP</h3>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia ipsa fuga. Natus velit quia aliquid beatae maxime!
                 </div>
                 <div class="right-column">
-                    RIGHT COLUMN
+                    <!-- RIGHT COLUMN -->
+                    <h3>have any question?</h3>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia ipsa fuga. Natus velit quia aliquid beatae maxime!
                 </div>
             </div>
