--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./style/components/mouse.css">
     <link rel="stylesheet" href="./style/components/progress-bar.css">
     <!-- custom style -->
+    <script src="./js/timer.js"></script>
     
 </head>
 
@@ -24,9 +25,15 @@
         <section class="container hero bg-primary">
             <div class="row-short">
                 <!-- HERO CONTENT -->
-                <h1>COMING SOON</h1> 
+                <h1><img src="./Image/logo.png" alt="logo" width="150%"></h1>
+                <img src=".//Image/Coming soon.png" alt="comming soon" width="50%">
                 <p> An awesom new company from web recources is coming very soon </p>
                 <p> Enter you email to reguest an early inivation!</p>
+            </div>
+            <div>
+                <h1>
+                    <p id="demo"></p>
+                </h1>
             </div>
         </section>
         <section class="container">
