timer style css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <h1>
-                    <p id="demo"></p>
+                    <p class="row-short timer" id="timer"></p>
                 </h1>
             </div>
         </section>
