--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./style/components/progress-bar.css">
     <!-- custom style -->
     <script src="./js/timer.js"></script>
-    
+
 </head>
 
 <body>
@@ -25,15 +25,13 @@
         <section class="container hero bg-primary">
             <div class="row-short">
                 <!-- HERO CONTENT -->
-                <h1><img src="./Image/logo.png" alt="logo" width="150%"></h1>
-                <img src=".//Image/Coming soon.png" alt="comming soon" width="50%">
+                <h1><img src="./Image/logo.png" alt="logo" ></h1>
+                <img src="./Image/Coming_soon.png" alt="comming soon" >
                 <p> An awesom new company from web recources is coming very soon </p>
                 <p> Enter you email to reguest an early inivation!</p>
             </div>
             <div>
-                <h1>
-                    <p class="row-short timer" id="timer"></p>
-                </h1>
+                <p class="row-short timer" id="timer"></p>
             </div>
         </section>
         <section class="container">
@@ -41,12 +39,26 @@
                 <div class="left-column">
                     <!-- LEFT COLUMN -->
                     <h3>ABOAUT STARTUP</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia ipsa fuga. Natus velit quia aliquid beatae maxime!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet
+                    eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti
+                    facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita
+                    laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe
+                    repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate
+                    reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas
+                    numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia
+                    ipsa fuga. Natus velit quia aliquid beatae maxime!
                 </div>
                 <div class="right-column">
                     <!-- RIGHT COLUMN -->
                     <h3>have any question?</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia ipsa fuga. Natus velit quia aliquid beatae maxime!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam sit animi amet
+                    eligendi beatae error minus consequuntur tempore optio dolorum neque nostrum adipisci, corrupti
+                    facilis hic tempora? A quos non illum, hic eius, ab quia dolorum temporibus iure excepturi expedita
+                    laboriosam aperiam ipsa porro perferendis rerum. Quas accusantium exercitationem placeat, saepe
+                    repellat laboriosam nisi est velit provident hic laudantium vel quidem ducimus earum voluptate
+                    reprehenderit voluptates eveniet ipsam itaque enim. Animi repudiandae eius necessitatibus quas
+                    numquam nobis, vel dicta expedita ea odio consequatur at, totam sint maiores alias amet magni quia
+                    ipsa fuga. Natus velit quia aliquid beatae maxime!
                 </div>
             </div>
         </section>
@@ -55,7 +67,13 @@
         <div class="row">SOCIALS</div>
         <div class="row-short">
             FOOTER BOTTOM TEXTS
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident maxime ab natus est inventore amet molestiae assumenda libero id soluta similique incidunt placeat eius dolore porro enim sit sequi dicta exercitationem voluptatum sunt, quo nemo? Voluptatum tempora perferendis enim sapiente. Pariatur omnis nisi in neque, est doloremque. Deleniti eaque necessitatibus laboriosam possimus enim tempora obcaecati nobis odio? Labore velit ducimus totam distinctio molestiae, vero, a expedita cum quibusdam delectus quia suscipit inventore sint aspernatur illum. Quaerat aliquid debitis magni quidem tempore iure commodi. Vel quis iste quasi, vero beatae iusto consequuntur, ipsa, quod quo excepturi in veritatis dolore aliquid?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident maxime ab natus est inventore
+            amet molestiae assumenda libero id soluta similique incidunt placeat eius dolore porro enim sit sequi dicta
+            exercitationem voluptatum sunt, quo nemo? Voluptatum tempora perferendis enim sapiente. Pariatur omnis nisi
+            in neque, est doloremque. Deleniti eaque necessitatibus laboriosam possimus enim tempora obcaecati nobis
+            odio? Labore velit ducimus totam distinctio molestiae, vero, a expedita cum quibusdam delectus quia suscipit
+            inventore sint aspernatur illum. Quaerat aliquid debitis magni quidem tempore iure commodi. Vel quis iste
+            quasi, vero beatae iusto consequuntur, ipsa, quod quo excepturi in veritatis dolore aliquid?
         </div>
     </footer>
 </body>
