--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <div>
                 <p class="row-short timer" id="timer"></p>
             </div>
+            <form class="row-short">
+                <label for="email">Type you email:</label>
+                <input type="email" id="email" name="email" >
+                <input type="submit" value="Submit">
+            </form>
         </section>
         <section class="container">
             <div class="row main-content">
