--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <div>
                 <p class="row-short timer" id="timer"></p>
             </div>
-            <form class="row-short">
+            <form >
                 <label for="email">Type you email:</label>
-                <input type="email" id="email" name="email" >
-                <input type="submit" value="Submit">
+                <input class="form" type="email" id="email" name="email" ><br>
+                <input class="form" type="submit" value="Submit">
             </form>
         </section>
         <section class="container">
