--- a/index.html
+++ b/index.html
@@ -69,7 +69,27 @@
         </section>
     </main>
     <footer class="container bg-primary">
-        <div class="row">SOCIALS</div>
+        <div class="row">
+            <!-- SOCIALS -->
+            <a class="social" href="https://www.facebook.com" target="_blank">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a class="social" href="https://www.twitter.com" target="_blank">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a class="social" href="https://www.instagram.com" target="_blank">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a class="social" href="https://www.tumblr.com/login" target="_blank">
+            <i class="fa fa-tumblr" aria-hidden="true"></i>
+            </a>
+            <a class="social" href="https://www.linkedin.com" target="_blank">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>   
+            <a class="social" href="https://www.rss.com" target="_blank">
+                <i class="fa fa-rss" aria-hidden="true"></i>
+            </a>
+        </div>
         <div class="row-short">
             FOOTER BOTTOM TEXTS
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident maxime ab natus est inventore
