--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
                 <p> An awesom new company from web recources is coming very soon </p>
                 <p> Enter you email to reguest an early inivation!</p>
             </div>
-            <div>
-                <p class="row-short timer" id="timer"></p>
+            <div class="row-timer">
+                <i class="timer" id="days"></i>
+                <i class="timer" id="hours"></i>
+                <i class="timer" id="minutes"></i>
+                <i class="timer" id="seconds"></i>
+
             </div>
             <form >
                 <label for="email">Type you email:</label>
