--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         <section class="container hero bg-primary">
             <div class="row-short">
                 <!-- HERO CONTENT -->
-                <h1><img src="./Image/logo.png" alt="logo" ></h1>
-                <img src="./Image/Coming_soon.png" alt="comming soon" >
-                <p> An awesom new company from web recources is coming very soon </p>
+               <img class="logo" src="./Image/logo.png" alt="logo" >
+                <h1 class="main-title">COMING SOON</h1>
+                <!-- <img src="./Image/Coming_soon.png" alt="comming soon" > -->
+                <p class="main-description"> An awesom new company from web recources is coming very soon </p>
                 <p> Enter you email to reguest an early inivation!</p>
-            </div>
-            <div class="row-timer">
+            </div >
+            <div class="clock">
+            <p>Clock</p>
+        </div>
+            <!-- <div class="row-timer">
                 <i class="timer" id="days"></i>
                 <i class="timer" id="hours"></i>
                 <i class="timer" id="minutes"></i>
@@ -41,7 +45,7 @@
                 <label for="email">Type you email:</label>
                 <input class="form" type="email" id="email" name="email" ><br>
                 <input class="form" type="submit" value="Submit">
-            </form>
+            </form> -->
         </section>
         <section class="container">
             <div class="row main-content">
