Hero css and cloc add

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./style/components/progress-bar.css">
     <!-- custom style -->
     <script src="./js/timer.js"></script>
+    <link rel="stylesheet" href="./style/page/home.css">
 
 </head>
 
@@ -25,23 +26,31 @@
         <section class="container hero bg-primary">
             <div class="row-short">
                 <!-- HERO CONTENT -->
-               <img class="logo" src="./Image/logo.png" alt="logo" >
+                <img class="logo" src="./Image/logo.png" alt="logo">
                 <h1 class="main-title">COMING SOON</h1>
                 <!-- <img src="./Image/Coming_soon.png" alt="comming soon" > -->
-                <p class="main-description"> An awesom new company from web recources is coming very soon </p>
-                <p> Enter you email to reguest an early inivation!</p>
-            </div >
-            <div class="clock">
-            <p>Clock</p>
-        </div>
+                <p class="main-description"> An awesom new company from web recources is coming very soon. Enter you email to reguest an early inivation!</p>
+                <div class="row-timer">
+                    <i class="timer" id="days"></i>
+                    <i class="timer" id="hours"></i>
+                    <i class="timer" id="minutes"></i>
+                    <i class="timer" id="seconds"></i>
+                </div>
+                <div>
+                    form
+                </div>
+                <div>
+                    mouse
+                </div>
+            </div>
             <!-- <div class="row-timer">
                 <i class="timer" id="days"></i>
                 <i class="timer" id="hours"></i>
                 <i class="timer" id="minutes"></i>
                 <i class="timer" id="seconds"></i>
 
-            </div>
-            <form >
+            </div> -->
+            <!-- <form >
                 <label for="email">Type you email:</label>
                 <input class="form" type="email" id="email" name="email" ><br>
                 <input class="form" type="submit" value="Submit">
@@ -51,13 +60,26 @@
             <div class="row main-content">
                 <div class="left-column">
                     <!-- LEFT COLUMN -->
-                    <h3>ABOAUT STARTUP</h3>
-                    
+
+                    <h3 class="section-title">ABOAUT STARTUP</h3>
+                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Necessitatibus mollitia maiores alias corrupti consectetur, quis in quam eveniet reprehenderit
+                        voluptatem debitis. Doloremque, excepturi voluptatibus voluptatem tempore reiciendis repellendus
+                        mollitia magnam. </p>
+                    <div>
+                        BAR
+                    </div>
+                    <div>
+                        BAR
+                    </div>
+                    <div>
+                        BAR
+                    </div>
                 </div>
                 <div class="right-column">
                     <!-- RIGHT COLUMN -->
                     <h3>have any question?</h3>
-                    
+
                 </div>
             </div>
         </section>
@@ -75,11 +97,11 @@
                 <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
             <a class="social" href="https://www.tumblr.com/login" target="_blank">
-            <i class="fa fa-tumblr" aria-hidden="true"></i>
+                <i class="fa fa-tumblr" aria-hidden="true"></i>
             </a>
             <a class="social" href="https://www.linkedin.com" target="_blank">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>   
+            </a>
             <a class="social" href="https://www.rss.com" target="_blank">
                 <i class="fa fa-rss" aria-hidden="true"></i>
             </a>
