--- a/index.html
+++ b/index.html
@@ -61,24 +61,28 @@
                 <div class="left-column">
                     <!-- LEFT COLUMN -->
 
-                    <h3 class="section-title">ABOAUT STARTUP</h3>
+                    <h2 class="section-title">ABOAUT STARTUP</h2>
                     <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Necessitatibus mollitia maiores alias corrupti consectetur, quis in quam eveniet reprehenderit
                         voluptatem debitis. Doloremque, excepturi voluptatibus voluptatem tempore reiciendis repellendus
                         mollitia magnam. </p>
                     <div>
-                        BAR
+                        Progres bar
                     </div>
                     <div>
-                        BAR
+                        Progres bar
                     </div>
                     <div>
-                        BAR
+                        Progres bar
                     </div>
                 </div>
                 <div class="right-column">
                     <!-- RIGHT COLUMN -->
-                    <h3>have any question?</h3>
+                    <h2 class="section-title">have any question?</h2>
+                    <p class="section-description" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus provident tenetur eum numquam accusamus neque, aliquam cupiditate mollitia aliquid necessitatibus sunt tempora iste dolore unde quis alias modi! Porro, distinctio!</p>
+                    <form>
+                        Massage form
+                    </form>
 
                 </div>
             </div>
