main content css and content

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
                     <!-- LEFT COLUMN -->
 
                     <h2 class="section-title">ABOAUT STARTUP</h2>
-                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Necessitatibus mollitia maiores alias corrupti consectetur, quis in quam eveniet reprehenderit
-                        voluptatem debitis. Doloremque, excepturi voluptatibus voluptatem tempore reiciendis repellendus
-                        mollitia magnam. </p>
+                    <p class="section-description">Matrox material design multi-purpose html template. It comes with huge content and background variants. <a href="#">Matrox</a> is coming very soon. We are nearly there.</p>
                     <div>
                         Progres bar
                     </div>
@@ -79,7 +76,7 @@
                 <div class="right-column">
                     <!-- RIGHT COLUMN -->
                     <h2 class="section-title">have any question?</h2>
-                    <p class="section-description" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus provident tenetur eum numquam accusamus neque, aliquam cupiditate mollitia aliquid necessitatibus sunt tempora iste dolore unde quis alias modi! Porro, distinctio!</p>
+                    <p class="section-description" >You can use contact form below or us via e-mail at <a href="mailto:matrox@mail.com">matrox@mail.com</a> Contact form is fully working and very easy to customize.</p>
                     <form>
                         Massage form
                     </form>
