--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <link rel="stylesheet" href="./style/components/clock.css">
     <link rel="stylesheet" href="./style/components/mouse.css">
     <link rel="stylesheet" href="./style/components/progress-bar.css">
-    <!-- custom style -->
-    <script src="./js/timer.js"></script>
+    <link rel="stylesheet" href="./style/components/social.css">
     <link rel="stylesheet" href="./style/page/home.css">
 
+    <!-- custom style -->
+    <script src="./js/timer.js"></script>
+   
 </head>
 
 <body>
@@ -77,26 +79,14 @@
         </section>
     </main>
     <footer class="container bg-primary">
-        <div class="row">
+        <div class="row socials">
             <!-- SOCIALS -->
-            <a class="social" href="https://www.facebook.com" target="_blank">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a class="social" href="https://www.twitter.com" target="_blank">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a class="social" href="https://www.instagram.com" target="_blank">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-            <a class="social" href="https://www.tumblr.com/login" target="_blank">
-                <i class="fa fa-tumblr" aria-hidden="true"></i>
-            </a>
-            <a class="social" href="https://www.linkedin.com" target="_blank">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a class="social" href="https://www.rss.com" target="_blank">
-                <i class="fa fa-rss" aria-hidden="true"></i>
-            </a>
+            <a class="icon fa fa-facebook" href="https://www.facebook.com" target="_blank"></a>
+            <a class="icon fa fa-twitter" href="https://www.twitter.com" target="_blank"></a>
+            <a class="icon fa fa-dribbble" href="https://www.instagram.com" target="_blank"></a>
+            <a class="icon fa fa-tumblr" href="https://www.tumblr.com/login" target="_blank"></a>
+            <a class="icon fa fa-linkedin" href="https://www.linkedin.com" target="_blank"></a>
+            <a class="icon fa fa-rss" href="https://www.rss.com" target="_blank"></a>
         </div>
         <div class="row-short">
             FOOTER BOTTOM TEXTS
