--- a/index.html
+++ b/index.html
@@ -88,15 +88,16 @@
             <a class="icon fa fa-linkedin" href="https://www.linkedin.com" target="_blank"></a>
             <a class="icon fa fa-rss" href="https://www.rss.com" target="_blank"></a>
         </div>
-        <div class="row-short">
-            FOOTER BOTTOM TEXTS
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident maxime ab natus est inventore
-            amet molestiae assumenda libero id soluta similique incidunt placeat eius dolore porro enim sit sequi dicta
-            exercitationem voluptatum sunt, quo nemo? Voluptatum tempora perferendis enim sapiente. Pariatur omnis nisi
-            in neque, est doloremque. Deleniti eaque necessitatibus laboriosam possimus enim tempora obcaecati nobis
-            odio? Labore velit ducimus totam distinctio molestiae, vero, a expedita cum quibusdam delectus quia suscipit
-            inventore sint aspernatur illum. Quaerat aliquid debitis magni quidem tempore iure commodi. Vel quis iste
-            quasi, vero beatae iusto consequuntur, ipsa, quod quo excepturi in veritatis dolore aliquid?
+        <div class="row-short"> 
+            <!-- FOOTER BOTTOM  -->
+            <img src="./Image/Logo_w.png" alt="logo">Matrox
+            <div class="bottom-trio"></div>
+            <span>Copyright &copy; 2022 <a href="#">Matrox</a></span>
+            <span>All rigths reserved</span>
+            <span>Designe by <a href="#" target="_blank">TrendyTheme</a></span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In hic similique facilis, <a href="#">Matrox</a>laborum laudantium voluptas dolore qui illo sit, rerum, dignissimos doloribus obcaecati sunt accusamus facere<a href="#">Matrox</a> quidem alias cumque nisi.</p>
+           
+            
         </div>
     </footer>
 </body>
