--- a/index.html
+++ b/index.html
@@ -83,21 +83,20 @@
             <!-- SOCIALS -->
             <a class="icon fa fa-facebook" href="https://www.facebook.com" target="_blank"></a>
             <a class="icon fa fa-twitter" href="https://www.twitter.com" target="_blank"></a>
-            <a class="icon fa fa-dribbble" href="https://www.instagram.com" target="_blank"></a>
+            <a class="icon fa fa-instagram" href="https://www.instagram.com" target="_blank"></a>
+            <a class="icon fa fa-dribbble" href="https://dribbble.com" target="_blank"></a>
             <a class="icon fa fa-tumblr" href="https://www.tumblr.com/login" target="_blank"></a>
             <a class="icon fa fa-linkedin" href="https://www.linkedin.com" target="_blank"></a>
             <a class="icon fa fa-rss" href="https://www.rss.com" target="_blank"></a>
         </div>
         <div class="row-short"> 
             <!-- FOOTER BOTTOM  -->
-            <img src="./Image/Logo_w.png" alt="logo">Matrox
+            <img src="./Image/logo-white.png" alt="logo">
             <div class="bottom-trio"></div>
             <span>Copyright &copy; 2022 <a href="#">Matrox</a></span>
             <span>All rigths reserved</span>
-            <span>Designe by <a href="#" target="_blank">TrendyTheme</a></span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In hic similique facilis, <a href="#">Matrox</a>laborum laudantium voluptas dolore qui illo sit, rerum, dignissimos doloribus obcaecati sunt accusamus facere<a href="#">Matrox</a> quidem alias cumque nisi.</p>
-           
-            
+            <span>Designe by <a href="https://themeforest.net" target="_blank">TrendyTheme</a></span>
+            <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a href="#">Matrox</a> Now!</p>
         </div>
     </footer>
 </body>
