--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
         </div>
         <div class="row-short">
             <!-- FOOTER BOTTOM  -->
-            <img src="./Image/logo-white.png" alt="logo">
-            <div class="bottom-trio"></div>
-            <span>Copyright &copy; 2022 <a href="#">Matrox</a></span>
-            <span>All rigths reserved</span>
-            <span>Designe by <a href="https://themeforest.net" target="_blank">TrendyTheme</a></span>
-            <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a
-                    href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a
-                    href="#">Matrox</a> Now!</p>
+            <img class="logo" src="./Image/logo-white.png" alt="logo">
+            <div class="bottom-trio">
+                <span>Copyright &copy; 2022 <a href="#">Matrox</a></span>
+                <span>All rigths reserved</span>
+                <span>Designe by <a href="https://themeforest.net" target="_blank">TrendyTheme</a></span>
+
+                <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a
+                        href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a
+                        href="#">Matrox</a> Now!</p>
+            </div>
         </div>
     </footer>
 </body>
