Hero - Edid clock css

--- a/index.html
+++ b/index.html
@@ -32,19 +32,32 @@
                 <!-- <img src="./Image/Coming_soon.png" alt="comming soon" > -->
                 <p class="main-description"> An awesom new company from web recources is coming very soon. Enter you
                     email to reguest an early inivation!</p>
-                <div class="row-timer">
-                    <i class="timer" id="days"></i>
-                    <i class="timer" id="hours"></i>
-                    <i class="timer" id="minutes"></i>
-                    <i class="timer" id="seconds"></i>
+                <div class="clock">
+                    <div class="value">
+                        <i class="time" id="days"></i>
+                        <p class="clock_label">Days</p>
+                    </div>
+                    <div class="value">
+                        <i class="time" id="hours"></i>
+                        <p class="clock_label">Hours</p>
+                    </div>
+                    <div class="value">
+                        <i class="time" id="minutes"></i>
+                        <p class="clock_label">Minutes</p>
+                    </div>
+                    <div class="value">
+                        <i class="time" id="seconds"></i>
+                        <p class="clock_label">Seconds</p>
+                    </div>
                 </div>
-                <div>
-                    form
-                </div>
+                <form>
+                    Form
+                </form>
                 <div>
                     mouse
                 </div>
-            </div>
+
+
         </section>
         <section class="container">
             <div class="row main-content">
@@ -97,8 +110,10 @@
                     <span>All rigths reserved</span>
                     <span>Designe by <a href="https://themeforest.net" target="_blank">TrendyTheme</a></span>
                 </div>
-                <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a href="#">Matrox</a> Now!</p>
-        </div>
+                <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a
+                        href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a
+                        href="#">Matrox</a> Now!</p>
+            </div>
     </footer>
 </body>
 
