--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                     <p class="section-description">Matrox material design multi-purpose html template. It comes with
                         huge content and background variants. <a href="#">Matrox</a> is coming very soon. We are nearly
                         there.</p>
-                    <div>
-                        Progres bar
-                    </div>
-                    <div>
-                        Progres bar
-                    </div>
-                    <div>
-                        Progres bar
-                    </div>
+                        <div class="progress-bar">
+                            <div class="top">
+                                <div class="label">UX design</div>
+                                <div class="value">90%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="progress" style="width: 90%;"></div>
+                            </div>
+                        </div>
                 </div>
                 <div class="right-column">
                     <!-- RIGHT COLUMN -->
