--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
                             <div class="bottom">
                                 <div class="progress" style="width: 90%;"></div>
                             </div>
+                            <div class="top">
+                                <div class="label">Web Design</div>
+                                <div class="value">86%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="progress" style="width: 86%;"></div>
+                            </div>
+                            <div class="top">
+                                <div class="label">Web Development</div>
+                                <div class="value">65%</div>
+                            </div>
+                            <div class="bottom">
+                                <div class="progress" style="width: 65%;"></div>
+                            </div>
+                            
                         </div>
                 </div>
                 <div class="right-column">
