Mouse and progres bar animation

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
                 <form>
                     Form
                 </form>
-                <div>
-                    mouse
+                <div class="mouse">
+                    <div class="wheel"></div>
                 </div>
+            </div>
 
 
         </section>
@@ -73,21 +74,28 @@
                                 <div class="value">90%</div>
                             </div>
                             <div class="bottom">
-                                <div class="progress" style="width: 90%;"></div>
+                                <div class="progress" style="width: 90%;">
+                                <div class="bar"></div>
+                            </div>
                             </div>
                             <div class="top">
                                 <div class="label">Web Design</div>
                                 <div class="value">86%</div>
                             </div>
                             <div class="bottom">
-                                <div class="progress" style="width: 86%;"></div>
+                                <div class="progress" style="width: 86%;">
+                                <div class="bar"></div>
+                            </div>
                             </div>
                             <div class="top">
                                 <div class="label">Web Development</div>
                                 <div class="value">65%</div>
                             </div>
                             <div class="bottom">
-                                <div class="progress" style="width: 65%;"></div>
+                                <div class="progress" style="width: 65%;">
+                                    <div class="bar"></div>
+                                </div>
+                                
                             </div>
                             
                         </div>
@@ -127,6 +135,7 @@
             <p>Matrox pack includes websites not just homegage, it comes with full website demos. Over <a
                     href="https://www.200mais.com">200+</a> ready html files only for 17$. Purchase <a
                     href="#">Matrox</a> Now!</p>
+        </div>
 
     </footer>
 </body>
